--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
 </head>
 <body>
     <h1> 11 JS Frameworks</h1>
-    <img src="27.jpg" alt="intro image">
+    <!-- <img src="27.jpg" alt="intro image"> -->
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus soluta animi quam aut enim, praesentium minima esse vel, incidunt porro aperiam laudantium quod, provident doloribus debitis unde. Inventore, omnis porro?</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus explicabo repellat, similique beatae optio facilis, rem porro voluptate dolores pariatur et harum, minima enim eius laudantium quia! Distinctio, atque asperiores.</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga suscipit aut modi accusantium, facilis in laborum soluta voluptatum nesciunt commodi assumenda amet voluptatibus architecto eaque laboriosam nostrum ex. Assumenda, enim!</p>
     <h2>Sub heading</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione molestias quod recusandae iure doloribus qui tenetur quidem nihil sint amet, suscipit vero obcaecati, totam non ullam quam blanditiis maxime harum!</p>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe aliquam reprehenderit dignissimos temporibus voluptatem omnis voluptatibus impedit! Animi provident sunt temporibus illo tempore consequatur asperiores rerum, aut voluptatem nemo vitae.</p>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium, minus asperiores facere nam incidunt mollitia earum repudiandae provident soluta est deserunt nulla et maxime doloribus debitis aliquid facilis at quis!</p>
     <div>
